@@ -23,10 +23,8 @@ pdf(file = ifelse(onefile, "Rplots.pdf", "Rplot\%03d.pdf"),
 }
 \arguments{
   \item{file}{a character string giving the name of the file.
-#ifdef unix
     If it is of the form \code{"|cmd"}, the output is piped to the
     command given by \command{cmd}.
-#endif
     
     For use with \code{onefile = FALSE} give a C integer format such
     as \code{"Rplot\%03d.pdf"} (the default in that case).
@@ -283,9 +281,13 @@ pdf(file = ifelse(onefile, "Rplots.pdf", "Rplot\%03d.pdf"),
   \code{\link{embedFonts}},
   \code{\link{Devices}},
   \code{\link{postscript}}.
-#ifdef unix
-  
+
+#ifdef unix  
   \code{\link{cairo_pdf}} and (on Mac OS X only) \code{\link{quartz}}
+  for other devices that can produce PDF.
+#endif
+#ifdef windows  
+  \code{\link{cairo_pdf}} and (on Mac OS X only) \code{quartz}
   for other devices that can produce PDF.
 #endif
 
